--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,7 +18,6 @@
 
 body {
   font-family: "Inter", sans-serif;
-
 }
 
 @layer utilities {
@@ -54,9 +53,16 @@ body {
 #slide .slick-slide.slick-active {
   opacity: 1;
 }
+.slick-slide > div {
+  margin: 0 30px;
+}
+.slick-list {
+  margin: 0 -30px;
+}
 #chart-last-days {
  max-width: 164px;
  pointer-events: none;
+ margin-block: -34px;
 }
 .pagination li{
  padding: 8px 16px;
