--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -84,6 +84,12 @@ body {
   background: rgb(56,97,251);
   color: white;
 }
+#description a{
+  color: rgba(33,33,33,0.9);
+}
+#description a:hover{
+  color: rgb(56,97,251);
+}
 /* Mobile */
 @media only screen and (max-width: 600px) {
   .slick-track .slick-slide:not(:nth-child(3n)) > div {
