--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,13 +53,13 @@ body {
 #slide .slick-slide.slick-active {
   opacity: 1;
 }
-.slick-track .slick-slide:not(:nth-child(3n)) > div {
-  margin-right:30px;
+.slick-track .slick-slide > div {
+  margin-right:20px;
 }
 
-.slick-list {
+/* .slick-list {
   margin: 0 -30px;
-}
+} */
 #chart-last-days {
  max-width: 164px;
  pointer-events: none;
@@ -92,7 +92,7 @@ body {
 }
 /* Mobile */
 @media only screen and (max-width: 600px) {
-  .slick-track .slick-slide:not(:nth-child(3n)) > div {
+  .slick-track .slick-slide > div {
     margin-right:0;
   }
 }
