--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -127,3 +127,17 @@ body {
    30%,70% {transform: rotate(calc(var(--s,1)*120deg)) translate(calc(var(--s,1)*-5px),10px)}
    100%    {transform: rotate(calc(var(--s,1)*120deg)) translate(0)}
 }
+#content > span{
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+#content h3{
+  font-size: 20px;
+  line-height: 1.3;
+  font-weight: 600;
+}
+#content p{
+  font-size: 16px;
+  line-height: 1.5;
+}
