--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,7 +66,6 @@ body {
  margin-block: -34px;
 }
 .pagination li a{
- padding: 8px 16px;
  color: rgb(88,102,126);
  background: rgba(0,0,0,.04);
  border-radius: 6px;
@@ -74,6 +73,11 @@ body {
  font-size: 14px;
  transition: 0.3s;
  display: flex;
+ align-items: center;
+ justify-content: center;
+ padding: 4px 8px;
+ min-width: 40px;
+ height: 40px;
 }
 .pagination ul:first-child,
   .pagination ul:last-child{
