--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -107,35 +107,23 @@ body {
 }
 
 /* HTML: <div class="loader"></div> */
+/* HTML: <div class="loader"></div> */
 .loader {
   width: 50px;
-  aspect-ratio: 1.154;
-  position: relative;
-  background: conic-gradient(from 120deg at 50% 64%,#0000, rgb(56,97,251) 1deg 120deg,#0000 121deg);
-  animation: l27-0 1.5s infinite cubic-bezier(0.3,1,0,1);
+  padding: 4px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background: rgb(56,97,251);
+  --_m: 
+    conic-gradient(#0000 10%,#000),
+    linear-gradient(#000 0 0) content-box;
+  -webkit-mask: var(--_m);
+          mask: var(--_m);
+  -webkit-mask-composite: source-out;
+          mask-composite: subtract;
+  animation: l3 1s infinite linear;
 }
-.loader:before,
-.loader:after {
-  content:'';
-  position: absolute;
-  inset:0;
-  background:inherit;
-  transform-origin: 50% 66%;
-  animation: l27-1 1.5s infinite;
-}
-.loader:after {
-  --s:-1;
-}
-@keyframes l27-0 {
-   0%,30%      {transform: rotate(0)}
-   70%         {transform: rotate(120deg)}
-   70.01%,100% {transform: rotate(360deg)}
-}
-@keyframes l27-1 {
-   0%      {transform: rotate(calc(var(--s,1)*120deg)) translate(0)}
-   30%,70% {transform: rotate(calc(var(--s,1)*120deg)) translate(calc(var(--s,1)*-5px),10px)}
-   100%    {transform: rotate(calc(var(--s,1)*120deg)) translate(0)}
-}
+@keyframes l3 {to{transform: rotate(1turn)}}
 #content > span{
   display: flex;
   flex-direction: column;
