--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -26,26 +26,24 @@ body {
   }
 }
 .scroll-hidden {
-   scrollbar-width: none;
-
+  scrollbar-width: none;
 }
 .arrow-up {
-  content: '';
-  width: 0; 
-  height: 0; 
+  content: "";
+  width: 0;
+  height: 0;
   border-left: 8px solid transparent;
   border-right: 8px solid transparent;
-  
+
   border-bottom: 8px solid black;
 }
-#slide .slick-prev  {
+#slide .slick-prev {
   left: 25px;
   z-index: 2;
 }
 #slide .slick-next {
   right: 25px;
   z-index: 2;
-
 }
 #slide .slick-slide {
   opacity: 0.5;
@@ -54,55 +52,54 @@ body {
   opacity: 1;
 }
 .slick-track .slick-slide > div {
-  margin-right:20px;
+  margin-right: 20px;
 }
 
 /* .slick-list {
   margin: 0 -30px;
 } */
 #chart-last-days {
- max-width: 164px;
- margin-block: -34px;
+  max-width: 164px;
+  margin-block: -34px;
 }
-.pagination li a{
- color: rgb(88,102,126);
- background: rgba(0,0,0,.04);
- border-radius: 6px;
- font-weight: 700;
- font-size: 14px;
- transition: 0.3s;
- display: flex;
- align-items: center;
- justify-content: center;
- padding: 4px 8px;
- min-width: 40px;
- height: 40px;
+.pagination li a {
+  color: rgb(88, 102, 126);
+  background: rgba(0, 0, 0, 0.04);
+  border-radius: 6px;
+  font-weight: 700;
+  font-size: 14px;
+  transition: 0.3s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 4px 8px;
+  min-width: 40px;
+  height: 40px;
 }
 .pagination ul:first-child,
-  .pagination ul:last-child{
-    align-self: stretch;
-  
+.pagination ul:last-child {
+  align-self: stretch;
 }
-.pagination li.selected a{
-  background: rgb(56,97,251);
+.pagination li.selected a {
+  background: rgb(56, 97, 251);
   color: white;
 }
 .pagination li.disabled {
   opacity: 0.5;
 }
-.pagination li.disabled a{
+.pagination li.disabled a {
   cursor: not-allowed;
 }
-#description a{
-  color: rgba(33,33,33,0.9);
+#description a {
+  color: rgba(33, 33, 33, 0.9);
 }
-#description a:hover{
-  color: rgb(56,97,251);
+#description a:hover {
+  color: rgb(56, 97, 251);
 }
 /* Mobile */
 @media only screen and (max-width: 600px) {
   .slick-track .slick-slide > div {
-    margin-right:0;
+    margin-right: 0;
   }
 }
 
@@ -113,28 +110,30 @@ body {
   padding: 4px;
   aspect-ratio: 1;
   border-radius: 50%;
-  background: rgb(56,97,251);
-  --_m: 
-    conic-gradient(#0000 10%,#000),
-    linear-gradient(#000 0 0) content-box;
+  background: rgb(56, 97, 251);
+  --_m: conic-gradient(#0000 10%, #000), linear-gradient(#000 0 0) content-box;
   -webkit-mask: var(--_m);
-          mask: var(--_m);
+  mask: var(--_m);
   -webkit-mask-composite: source-out;
-          mask-composite: subtract;
+  mask-composite: subtract;
   animation: l3 1s infinite linear;
 }
-@keyframes l3 {to{transform: rotate(1turn)}}
-#content > span{
+@keyframes l3 {
+  to {
+    transform: rotate(1turn);
+  }
+}
+#content > span {
   display: flex;
   flex-direction: column;
   gap: 16px;
 }
-#content h3{
+#content h3 {
   font-size: 20px;
   line-height: 1.3;
   font-weight: 600;
 }
-#content p{
+#content p {
   font-size: 16px;
   line-height: 1.5;
 }
@@ -151,17 +150,44 @@ body {
 .loader-lang {
   height: 16px;
   aspect-ratio: 2.5;
-  --_g: no-repeat radial-gradient(farthest-side,rgb(88, 102, 126) 90%,#0000);
-  background:var(--_g), var(--_g), var(--_g), var(--_g);
+  --_g: no-repeat radial-gradient(farthest-side, rgb(88, 102, 126) 90%, #0000);
+  background: var(--_g), var(--_g), var(--_g), var(--_g);
   background-size: 20% 50%;
-  animation: l43 1s infinite linear; 
+  animation: l43 1s infinite linear;
 }
 @keyframes l43 {
-  0%     {background-position: calc(0*100%/3) 50% ,calc(1*100%/3) 50% ,calc(2*100%/3) 50% ,calc(3*100%/3) 50% }
-  16.67% {background-position: calc(0*100%/3) 0   ,calc(1*100%/3) 50% ,calc(2*100%/3) 50% ,calc(3*100%/3) 50% }
-  33.33% {background-position: calc(0*100%/3) 100%,calc(1*100%/3) 0   ,calc(2*100%/3) 50% ,calc(3*100%/3) 50% }
-  50%    {background-position: calc(0*100%/3) 50% ,calc(1*100%/3) 100%,calc(2*100%/3) 0   ,calc(3*100%/3) 50% }
-  66.67% {background-position: calc(0*100%/3) 50% ,calc(1*100%/3) 50% ,calc(2*100%/3) 100%,calc(3*100%/3) 0   }
-  83.33% {background-position: calc(0*100%/3) 50% ,calc(1*100%/3) 50% ,calc(2*100%/3) 50% ,calc(3*100%/3) 100%}
-  100%   {background-position: calc(0*100%/3) 50% ,calc(1*100%/3) 50% ,calc(2*100%/3) 50% ,calc(3*100%/3) 50% }
+  0% {
+    background-position: calc(0 * 100% / 3) 50%, calc(1 * 100% / 3) 50%,
+      calc(2 * 100% / 3) 50%, calc(3 * 100% / 3) 50%;
+  }
+  16.67% {
+    background-position: calc(0 * 100% / 3) 0, calc(1 * 100% / 3) 50%,
+      calc(2 * 100% / 3) 50%, calc(3 * 100% / 3) 50%;
+  }
+  33.33% {
+    background-position: calc(0 * 100% / 3) 100%, calc(1 * 100% / 3) 0,
+      calc(2 * 100% / 3) 50%, calc(3 * 100% / 3) 50%;
+  }
+  50% {
+    background-position: calc(0 * 100% / 3) 50%, calc(1 * 100% / 3) 100%,
+      calc(2 * 100% / 3) 0, calc(3 * 100% / 3) 50%;
+  }
+  66.67% {
+    background-position: calc(0 * 100% / 3) 50%, calc(1 * 100% / 3) 50%,
+      calc(2 * 100% / 3) 100%, calc(3 * 100% / 3) 0;
+  }
+  83.33% {
+    background-position: calc(0 * 100% / 3) 50%, calc(1 * 100% / 3) 50%,
+      calc(2 * 100% / 3) 50%, calc(3 * 100% / 3) 100%;
+  }
+  100% {
+    background-position: calc(0 * 100% / 3) 50%, calc(1 * 100% / 3) 50%,
+      calc(2 * 100% / 3) 50%, calc(3 * 100% / 3) 50%;
+  }
+}
+
+.widget-container {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 }
